@@ -24,18 +24,10 @@ Type 'q()' to quit R.
 +   pompExample(dacca)
 + 
 +   x <- as.data.frame(dacca)
-+   print(names(x))
-+   print(dim(x))
-+ 
 +   x <- simulate(dacca,nsim=3,as.data.frame=TRUE)
-+   print(names(x))
-+   print(dim(x))
 + 
 +   pf <- pfilter(dacca,Np=1000,seed=5886855L)
-+   print(round(logLik(pf),digits=1))
-+ 
 +   pf1 <- pfilter(simulate(dacca),Np=1000,seed=5886855L)
-+   print(round(logLik(pf1),digits=1))
 + 
 +   ## to investigate the rogue crash:
 + 
@@ -110,22 +102,10 @@ Type 'q()' to quit R.
 + }
 Loading required package: mvtnorm
 Loading required package: subplex
+Loading required package: nloptr
 Loading required package: deSolve
 newly created pomp object(s):
  dacca 
- [1] "time"           "cholera.deaths" "seas.1"         "seas.2"        
- [5] "seas.3"         "seas.4"         "seas.5"         "seas.6"        
- [9] "pop"            "dpopdt"         "trend"         
-[1] 600  11
- [1] "time"           "cholera.deaths" "S"              "I"             
- [5] "Rs"             "R1"             "R2"             "R3"            
- [9] "M"              "W"              "count"          "seas.1"        
-[13] "seas.2"         "seas.3"         "seas.4"         "seas.5"        
-[17] "seas.6"         "pop"            "dpopdt"         "trend"         
-[21] "sim"           
-[1] 1800   21
-[1] -3748.6
-[1] -3701.5
 Warning messages:
 1: 11 filtering failures occurred in 'pfilter' 
 2: 4 filtering failures occurred in 'pfilter' 
@@ -138,4 +118,4 @@ Warning messages:
 > 
 > proc.time()
    user  system elapsed 
- 11.056   0.060  11.164 
+ 11.092   0.056  11.206 
